@@ -14,6 +14,7 @@ documents those changes that are of interest to users and admins.
  - Delete pending job if it's associated partition is deleted.
  - fix for handling batch steps completing correctly and setting the 
    return code.
+ - In sched/wiki2, support newly defined SIGNALJOB command.
 
 * Changes in SLURM 1.1.20
 =========================
